<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.MainActivity">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabNoteEditor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/_10ssp"
            app:srcCompat="@drawable/ic_add"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_10ssp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/app_name"
                        android:textSize="@dimen/_37ssp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textField"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/search"
                            android:visibility="invisible"
                            app:boxBackgroundColor="@android:color/transparent"
                            app:startIconDrawable="@drawable/ic_search">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/searchQuery"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <ImageButton
                            android:id="@+id/ibSearch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:padding="@dimen/_5ssp"
                            android:src="@drawable/ic_search" />

                        <ImageButton
                            android:id="@+id/ibSettings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:padding="@dimen/_5ssp"
                            android:src="@drawable/ic_setting" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_20ssp"
                    android:fontFamily="@font/open_sans_bold"
                    android:gravity="center"
                    android:id="@+id/noteDataView"
                    android:text="@string/noData"
                    android:textSize="@dimen/_37ssp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvNotes"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/item_note" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>